# ProjetGeomatique

./: .gitignore  Analyse_MINISIG.odt  CMakeLists.txt  Dockerfile  MNT.md  ProjetGeomatique.pro  README.md  Readme installation TiSIG .odt  Readme_shp.md  Readme_test.md  create_db.sh  dbcontroller.cpp  dbcontroller.h  doxygen_doc.md  import.sh  main.cpp  nom_objets.md  setup.sh  utilisation_docker_bdd.md
.github/workflows/: blank.yml  test.yml  tests.yml
3D/: README.md
3D/CityGML/: README.md
3D/CityJSON/: README.md  exemple.json
3D/QGIS/: flex.html
3D/affichageV1/: CMakeLists.txt  camera.cpp  main.cpp  object.cpp  object.h  pointlight.h  renderer.cpp  texture.cpp  texture.h  vertexbuffer.h
3D/affichageV2/: CMakeLists.txt  batiment.cpp  batiment.h  batiments.cpp  camera.h  controls.cpp  fpscontrols.cpp  fpscontrols.h  main.cpp  object.cpp  (+8 more)
Documents/: Analyse_Projet_TiSIG.md
TiSIG/: TiSIG.pro
import_raster/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  downloaded_image.tiff  import_raster  import_raster.cpp  main  main.cpp  wms.cpp  wms.h  wmts.cpp  wmts.h
import_shp/: ARRONDISSEMENT.dbf  ARRONDISSEMENT.shp  ARRONDISSEMENT.shx  ITINERAIRE_AUTRE.dbf  ITINERAIRE_AUTRE.shp  ITINERAIRE_AUTRE.shx  README.md  import_shp.pro  main  main.cpp  mainwindow.cpp  shapefile.cpp  shapefile.h
interface/: README.md  interface.pro  nom_objets.md
qttest/: main.moc
src/: src.pro
test_db/: CMakeLists.txt  dbcontroller.cpp  dbmanager.cpp  dbmanager.h  docker.h  executor.cpp  main.cpp  test_db.pro  testcontroller.cpp  testcontroller.h
(+219 files in other folders)
